| Bug #8480 | REPAIR TABLE does not invalidate query cache | ||
|---|---|---|---|
| Submitted: | 12 Feb 2005 21:04 | Modified: | 12 Mar 2005 5:34 |
| Reporter: | Dean Ellis | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.0.24 forward | OS: | |
| Assigned to: | Jim Winstead | Target Version: | |
[12 Feb 2005 21:04]
Dean Ellis
[8 Mar 2005 3:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/22761
[12 Mar 2005 1:03]
Jim Winstead
Pushed, will be in 4.1.11 and 5.0.3.
[12 Mar 2005 5:34]
Paul DuBois
Noted in 4.0.25, 4.1.11, 5.0.3 changelogs.
