Flush entries from the query cache for tables used in administrative statements that may alter the table, such as REPAIR TABLE. (Bug #8480)